Minor revision changes trials

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ data/YL_JOE_submission_SI.docx
 *.RData
 data/PaperOutput/AdditionalMetadata/PaleonModelProtocol.Phase2.v4.1.pdf
 .DS_Store
+data/US_EPA_ecoregions
